--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet"> 
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="/css/style.css">
   
   <title>Frontend Mentor | Easybank landing page</title>
 
@@ -16,11 +22,42 @@
 </head>
 <body>
 
-  Home
-  About
-  Contact
-  Blog
-  Careers
+  <header class="header" id="header-container">
+    <nav class="flex flex-jc-sb flex-ai-c" id="nav-container">
+      <div id="logo-container">
+        <a href="/index.html" class="header__logo">
+          <img src="/images/logo.svg" alt="Easybank">
+        </a>
+      </div>
+      
+      <div id="hamburger-container" class="hide-for-desktop">
+        <a href="#" class="header__hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+      </div>
+
+      <div class="header__links-container hide-for-mobile">
+        <a href="/index.html">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Blog</a>
+        <a href="#">Careers</a>
+      </div>
+
+      <div id="button-container" class="hide-for-mobile">
+        <a href="#" class="button header__cta">Request Invite</a>
+      </div>
+    </nav>
+    
+  </header>
+
+  <!-- 
+  
+  
+  
+  
 
   Request Invite
 
@@ -96,6 +133,8 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
+
+  <script src="/app/js/script.js"></script>
 </body>
 </html>
