--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
 
   <header class="header" id="header-container">
+    <div class="overlay"></div>
     <nav class="flex flex-jc-sb flex-ai-c" id="nav-container">
       <div id="logo-container">
         <a href="/index.html" class="header__logo">
@@ -38,7 +39,7 @@
         </a>
       </div>
 
-      <div class="header__links-container hide-for-mobile">
+      <div class="header__links-container hide-for-tablet">
         <a href="/index.html">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
@@ -53,26 +54,23 @@
     
   </header>
 
-  <!-- 
-  
-  
-  
-  
-
-  Request Invite
-
-
-
-  Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
+  <section class="hero">
+    <div class="hero__image"></div>
+    <div class="hero__text container">
+      <h1>
+        Next generation digital banking
+      </h1>
+      <p>
+        Take your financial life online. Your Easybank account will be a one-stop-shop 
+        for spending, saving, budgeting, investing, and much more.
+      </p>
+      <a href="#" class="button hero__cta">Request Invite</a>
+    </div>
+  </section>
 
 
 
-  Why choose Easybank?
+  <!-- Why choose Easybank?
 
   We leverage Open Banking to turn your bank account into your financial hub. Control 
   your finances like never before.
